# labmap3

./: .gitignore  Labmap.hs  LockStats.hs  Makefile  README.md  labmap.cabal
Labmap/: Common.hs  Conf.hs  GetUser.hs  Lock.hs  Photo.hs  Scanner.hs  Unix.hs  Users.hs  Util.hs
client/test/: index.html  layout.json  main.coffee  main.js  screen.css
conf/: labmap.conf  labmap.json  ssh.conf
daemon/: Labmap.hs  labmap.cabal
daemon/Labmap/: Common.hs  Lock.hs  Photo.hs  Scanner.hs  Users.hs  Util.hs
daemon/System/: Utmp.hsc
daemon/conf/: labmap.conf
daemon/js_src/: main.coffee  main.js
daemon/static/: index.html  layout.json  main.js  screen.css
js_src/: main.coffee
static/: index.html  labmap.svg.bkp  layout.json  main.js  screen.css
static/img/: staff  students
system/: Utmp.hsc
